GS-10846 Stretched out "Submit" button on staging fixed - merged for 16.3

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -1994,7 +1994,11 @@ body.ie6 .clearfix {
 }
 
 #raise-your-hand .ryh-submit-onTC {
-    padding-left: 58px;
+    margin-left: 61px;
+}
+
+.ie6 #raise-your-hand .ryh-submit-onTC, .ie7 #raise-your-hand .ryh-submit-onTC, .ie8 #raise-your-hand .ryh-submit-onTC {
+    margin-left: 58px;
 }
 
 .ryh-bottomsection {
